# rgy

./: .gitignore  Cargo.toml
codegen/: Cargo.toml
codegen/src/: fetcher.rs  format.rs  generator.rs  main.rs
codegen/templates/: root.rs
core/: Cargo.toml
core/examples/: empty.rs
core/examples/pc/: debug.rs  hardware.rs  loader.rs  main.rs
core/src/: cgb.rs  cpu.rs  device.rs  dma.rs  fc.rs  gpu.rs  hardware.rs  high_ram.rs  ic.rs  inst.rs  joypad.rs  lib.rs  mbc.rs  mmu.rs  oam.rs  ram.rs  serial.rs  sound.rs  system.rs  timer.rs  wram.rs
core/src/apu/: mixer.rs  mod.rs  noise.rs  util.rs  wave.rs
core/tests/: test_roms.rs
utils/: Cargo.toml
utils/src/: lib.rs
