[package]
name = "rgy"
version = "0.1.0"
authors = ["Yushi Omote <yushiomote@gmail.com>"]
edition = "2018"
keywords = ["gameboy", "emulator"]
description = "No-std Rust GameBoy emulator library"
homepage = "https://github.com/yushiomote/rgy"
repository = "https://github.com/yushiomote/rgy"
documentation = "https://docs.rs/rgy"
license = "MIT"
readme = "../README.md"

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
bitflags = "2.6.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
rustyline = "14"
minifb = "0.12"
structopt = "0.3"
cpal = "0.9"
signal-hook = "0.3"


[features]
default = []
